--- a/index.html
+++ b/index.html
@@ -1,16 +1,168 @@
 <!DOCTYPE html>
-<html lang="id">
+<html ⚡ lang="id" itemscope itemtype="https://schema.org/WebPage">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="google-site-verification" content="gvfs58m38oRm1tXzhF5r3lWoukEbELv79XnDMmzdl4g" />
-  <title>Discoverku | Artikel Gacor</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="all" />
+  <meta name="bingbot" content="all" />
+  <meta name="yandexbot" content="all" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+   <meta name="googlebot" content="max-image-preview:large" />
+    <meta name="google-site-verification" content="gvfs58m38oRm1tXzhF5r3lWoukEbELv79XnDMmzdl4g" />
+  <title>Discover DewaHoki88 - Kumpulan Artikel Maxwin, Slot, & Fenomena Sosial</title>
+  <meta name="description" content="Kumpulan berita terbaru dan viral dari DewaHoki88 mengenai dunia slot online, maxwin, dan fenomena sosial terkini." />
+
+  <meta name="categories" content="website" />
+  <meta name="language" content="id-ID" />
+  <meta name="rating" content="general" />
+  <meta name="copyright" content="DewaHoki88" />
+  <meta name="author" content="DewaHoki88" />
+  <meta name="distribution" content="global" />
+  <meta name="publisher" content="DewaHoki88" />
+  <meta name="geo.placename" content="Indonesia" />
+  <meta name="geo.country" content="ID" />
+  <meta name="geo.region" content="ID" />
+  <meta name="tgn.nation" content="Indonesia" />
+
+  <link rel="canonical" href="https://jackpotgacor123.github.io/discover/" />
+<link rel="alternate" href="https://jackpotgacor123.github.io/discover/" hreflang="id-ID" />
+  <link rel="icon" href="https://i.postimg.cc/K81Lb505/favicon_dewahoki88.png" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="https://i.postimg.cc/K81Lb505/favicon_dewahoki88.png" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Discover DewaHoki88 - Kumpulan Artikel Maxwin, Slot, & Fenomena Sosial" />
+  <meta property="og:description" content="Kumpulan berita terbaru dan viral dari DewaHoki88 mengenai dunia slot online, maxwin, dan fenomena sosial terkini." />
+  <meta property="og:image" content="https://i.postimg.cc/853Cg9rr/maxwin-vs-mental-kaya.webp" />
+  <meta property="og:url" content="https://jackpotgacor123.github.io/discover/" />
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="id_ID" />
+  
+     
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@dewahoki88" />
+  <meta name="twitter:title" content="Discover DewaHoki88 - Kumpulan Artikel Maxwin, Slot, & Fenomena Sosial" />
+  <meta name="twitter:description" content="Kumpulan berita terbaru dan viral dari DewaHoki88 mengenai dunia slot online, maxwin, dan fenomena sosial terkini." />
+  <meta name="twitter:image" content="https://i.postimg.cc/K8CT8gVh/logo_dewahoki88.png" />
+  <meta name="twitter:label1" content="Estimasi waktu membaca" />
+  <meta name="twitter:data1" content="8 menit" />
+
+  <!-- Preload -->
+  <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
+  <link rel="preload" href="https://i.postimg.cc/K81Lb505/favicon_dewahoki88.png" as="image" />
+  <link rel="preload" href="https://i.postimg.cc/K8CT8gVh/logo_dewahoki88.png" as="image" />
+
+
+  <!-- Preload -->
+  
+  <link rel="preload" href="https://i.postimg.cc/K81Lb505/favicon_dewahoki88.png" as="image" />
+  <link rel="preload" href="https://i.postimg.cc/K8CT8gVh/logo_dewahoki88.png" as="image" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet" />
+	
+    <!-- AMP Scripts -->
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+  
+    
+ 	<!-- Light & dark mode -->
+	<meta name="theme-color" content="#ffe600" media="(prefers-color-scheme: light)">
+	<meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
+
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      background: #111;
+      color: #fff;
+    }
+    header {
+      background: #000;
+      padding: 20px;
+      text-align: center;
+      border-bottom: 3px solid #ffc400;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+      color: #ffc400;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+    .card {
+      background: #1c1c1c;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.4);
+    }
+    .card img {
+      width: 100%;
+      aspect-ratio: 16 / 9;
+      object-fit: cover;
+      border-radius: 4px 4px 0 0;
+      display: block;
+    }
+    .card-body {
+      padding: 15px;
+    }
+    .card-body h2 {
+      font-size: 18px;
+      color: #ffc400;
+      margin: 0 0 10px;
+    }
+    .card-body p {
+      font-size: 14px;
+      color: #ccc;
+      line-height: 1.4;
+    }
+    .card-body a {
+      color: #00b0ff;
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-block;
+      margin-top: 10px;
+    }
+    .card-body a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>Selamat datang di Discoverku</h1>
-  <p>Koleksi artikel viral untuk Google Discover 🚀</p>
-  <ul>
-    <li><a href="/discover/news/maxwin-vs-mental-kaya/">Maxwin vs Mental Kaya</a></li>
-  </ul>
+  <header>
+    <h1>Discover DewaHoki88 - Kumpulan Artikel Maxwin, Slot, & Fenomena Sosial</h1>
+  </header>
+
+  <section class="grid">
+    <!-- Artikel 1 -->
+    <div class="card">
+      <img src="https://i.postimg.cc/853Cg9rr/maxwin-vs-mental-kaya.webp" alt="Maxwin vs Mental Kaya" />
+      <div class="card-body">
+       <h2>Maxwin atau Mental Kaya, Mana yang Lebih Penting?</h2>
+        <p>Fenomena maxwin jadi impian banyak pemain, tapi benarkah menang besar cukup tanpa mentalitas yang kuat?</p>
+        <a href="/discover/news/maxwin-vs-mental-kaya/">Baca Selengkapnya</a>
+      </div>
+    </div>
+
+    <!-- Tambahkan artikel berikutnya di bawah ini -->
+    <!--
+    <div class="card">
+      <img src="URL-GAMBAR" alt="Judul Artikel" />
+      <div class="card-body">
+        <h2>Judul Artikel</h2>
+        <p>Deskripsi singkat artikel...</p>
+        <a href="LINK-KE-ARTIKEL">Baca Selengkapnya</a>
+      </div>
+    </div>
+    -->
+  </section>
 </body>
 </html>
